# fastcam

./: .gitignore  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CameraEngine.cpp  CameraEngine.h  GlRenderer.cpp  GlRenderer.h  MediaEncoder.cpp  MediaEncoder.h  PidController.cpp  PidController.h  native_bridge.cpp
app/src/main/java/com/fastcam/: FastCamApp.kt  MainActivity.kt
app/src/main/java/com/fastcam/audio/: AudioCapture.kt
app/src/main/java/com/fastcam/engine/: CameraLens.kt  NativeBridge.kt
app/src/main/java/com/fastcam/ui/: CameraScreen.kt  ControlsOverlay.kt  SettingsSheet.kt
app/src/main/java/com/fastcam/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
